WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91634
[Qt] QQuickWebView shouldn't recieve mouse events while dialogs are active
https://bugs.webkit.org/show_bug.cgi?id=91634
Summary
[Qt] QQuickWebView shouldn't recieve mouse events while dialogs are active
Pierre Rossi
Reported
2012-07-18 09:53:36 PDT
[Qt] QQuickWebView shouldn't recieve mouse events while dialogs are active
Attachments
Patch
(1.96 KB, patch)
2012-07-18 10:06 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre Rossi
Comment 1
2012-07-18 10:06:37 PDT
Created
attachment 153033
[details]
Patch
Alexis Menard (darktears)
Comment 2
2012-07-18 10:15:09 PDT
Comment on
attachment 153033
[details]
Patch ok
WebKit Review Bot
Comment 3
2012-07-18 10:43:49 PDT
Comment on
attachment 153033
[details]
Patch Clearing flags on attachment: 153033 Committed
r122987
: <
http://trac.webkit.org/changeset/122987
>
WebKit Review Bot
Comment 4
2012-07-18 10:43:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug